examples/test/testpolicy12996.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12996
  namespace: namespace156
spec:
  podSelector:
    matchLabels:
      key18: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value27
          key44: value7
          key29: value27
      podSelector:
        matchLabels:
          key36: value47
          key9: value12
          key28: value16
